update scatterview to canvas

--- a/TouchingStory/TouchingStory.csproj
+++ b/TouchingStory/TouchingStory.csproj
@@ -80,6 +80,10 @@
     <Compile Include="TagKeyword.xaml.cs">
       <DependentUpon>TagKeyword.xaml</DependentUpon>
     </Compile>
+    <Page Include="StyleDictionary.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="SurfaceWindow1.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
