--- a/TouchingStory/TouchingStory.csproj
+++ b/TouchingStory/TouchingStory.csproj
@@ -132,6 +132,7 @@
     </Content>
     <Content Include="TouchingStory.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
   <ItemGroup>
